// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionStringDelete matches snapshot hidden 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": "connectionStrings.deleteConnection.title",
    }
  }
  hidden={true}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
  onDismiss={[MockFunction]}
>
  <div
    className="connection-string-delete"
  >
    <div>
      connectionStrings.deleteConnection.body
    </div>
    <textarea
      aria-label="connectionStrings.deleteConnection.input"
      cols={40}
      readOnly={true}
      rows={8}
    >
      connectionString
    </textarea>
  </div>
  <StyledDialogFooterBase>
    <CustomizedPrimaryButton
      ariaLabel="connectionStrings.deleteConnection.yes.ariaLabel"
      onClick={[MockFunction]}
      text="connectionStrings.deleteConnection.yes.label"
    />
    <CustomizedDefaultButton
      ariaLabel="connectionStrings.deleteConnection.no.ariaLabel"
      onClick={[MockFunction]}
      text="connectionStrings.deleteConnection.no.label"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;

exports[`ConnectionStringDelete matches snapshot visible 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": "connectionStrings.deleteConnection.title",
    }
  }
  hidden={false}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
  onDismiss={[MockFunction]}
>
  <div
    className="connection-string-delete"
  >
    <div>
      connectionStrings.deleteConnection.body
    </div>
    <textarea
      aria-label="connectionStrings.deleteConnection.input"
      cols={40}
      readOnly={true}
      rows={8}
    >
      connectionString
    </textarea>
  </div>
  <StyledDialogFooterBase>
    <CustomizedPrimaryButton
      ariaLabel="connectionStrings.deleteConnection.yes.ariaLabel"
      onClick={[MockFunction]}
      text="connectionStrings.deleteConnection.yes.label"
    />
    <CustomizedDefaultButton
      ariaLabel="connectionStrings.deleteConnection.no.ariaLabel"
      onClick={[MockFunction]}
      text="connectionStrings.deleteConnection.no.label"
    />
  </StyledDialogFooterBase>
</StyledWithResponsiveMode>
`;
